test(vitest): add vitest, react-testing-library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+
+		/* config vitest*/
+		"types": ["vitest/globals"]
 	},
-	"include": ["src"],
+	"include": ["src", "./vitest-setup.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
