--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 		"noFallthroughCasesInSwitch": true,
 
 		/* config vitest*/
-		"types": ["vitest/globals"]
+    "types": ["vitest/globals", "@testing-library/jest-dom"]
 	},
 	"include": ["src", "./vitest-setup.ts"],
 	"references": [{ "path": "./tsconfig.node.json" }]
