--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"test-storybook": "test-storybook"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^2.2.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "^6.24.0"
 	},
 	"devDependencies": {
