--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^9.1.2",
-		"react-router-dom": "^6.24.0"
+		"react-router-dom": "^6.24.0",
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^1.5.0",
